# portfolio

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: aws_lambda.yml  ci.yml
backend/: .env.example  Dockerfile  README.md  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt
docs/: Summary.md  education.md  employment_history.md  tech_skills.md
docs/portfolios/: Mult-tenant-SaaS-platform.md  Prop_Edge_AI.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/blog/: page.tsx
src/app/contact/: page.tsx
src/app/projects/: page.tsx
src/app/projects/[slug]/: page.tsx
src/components/: ChatbotFAB.tsx  ScrollToTop.tsx  Sidebar.tsx  UniverseBackground.tsx
src/lib/: data.ts
terraform/: amplify.tf  infracost-usage.yml  lambda.tf  lambda_dummy.py  main.tf  outputs.tf  variables.tf
